--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 							Implemented Business Process Reengineering and Grievance Redressal Mechanism on Investor Facilitation Portal (IFP) to 
 							expedite investors’ applications, state approvals, licenses, and registrations and to solve investors’ grievances. </p>
 
-							<p><a href="https://eodb.dipp.gov.in/" class="button">Learn more - Business Reforms Action Plan</a></p>
+							<p><a href="https://eodb.dipp.gov.in/" class="button">Learn more</a></p>
 
 						<p style="text-align:justify">Handled international business delegation visits for conventions namely 52nd African Development Bank Annual Summit 
 							2017, Textile India 2017, India-Japan Annual Summit 2017, India-Israel Business Summit 2018, India - Uzbekistan Business 
@@ -73,7 +73,7 @@
 							Gujarat Global Summit 2017 & 2019 resulting in increased visibility as a part of Media & Public Relations team. Managed
 							data repository of exhibitors participating in mega events and created custom reports for tracking of receivables.</p>
 						
-							<p><a href="http://www.vibrantgujarat.com/" class="button">Learn more - Vibrant Gujarat Global Business Summit</a></p>
+							<p><a href="http://www.vibrantgujarat.com/" class="button">Learn more</a></p>
 
 						<h3>Kartik Engineers Pvt. Ltd.</h3>
 						<p style="text-align:justify">Optimized the efficiency of injection moulding machine based on Human Machine Interface. The HMI was built over Programmable Logic Control (PLC) by Siemens.
